# AWS-Bedrock-RAG

./: README.md  app.py  pyproject.toml  requirements.txt
