[project]
name = "aws-bedrock-rag"
version = "0.1.0"
description = "aws pdf RAG"
authors = [
    {name = "Prakash Shiva",email = "prakashs0234@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "boto3 (>=1.37.23,<2.0.0)",
    "awscli (>=1.38.23,<2.0.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "streamlit (>=1.44.0,<2.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "langchain-community (>=0.3.20,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
